# rust-grpc-framework

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml
examples/: Cargo.toml
examples/src/: main.rs
proto/: grpc.proto
src/: config.rs  database.rs  error.rs  lib.rs  message.rs  server.rs  state.rs
src/middleware/: auth.rs
